test/fail/basic_syntax/bad_anon_call.lly
#[
SyntaxError: Cannot anonymously call resulting type 'integer'.
    from bad_anon_call.lly:6
]#

(10)()
